--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-learn",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/theandys/react-learn",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
@@ -17,6 +18,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
